<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_10">

    <TextView
        android:id="@+id/senderTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/beena"
        android:textColor="@color/red"
        android:textSize="@dimen/dimen_18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_10"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/pays"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_18sp"
        app:layout_constraintStart_toEndOf="@id/senderTv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/receiverTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_10"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/fena"
        android:textColor="@color/green"
        android:textSize="@dimen/dimen_18sp"
        app:layout_constraintStart_toEndOf="@id/pays"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/amountTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_10"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/five_hundred"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_18sp"
        app:layout_constraintStart_toEndOf="@id/receiverTv"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>