<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_base"
    tools:context=".settleup.beforesettleup.BeforeSettleUpActivity">

    <ImageView
        android:id="@+id/backBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20"
        android:layout_marginTop="@dimen/dimen_20"
        android:contentDescription="@string/balance"
        android:src="@drawable/back_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/settle_up"
        android:layout_marginStart="@dimen/dimen_20"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_32sp"
        app:layout_constraintStart_toEndOf="@id/backBt"
        app:layout_constraintTop_toTopOf="@id/backBt"
        app:layout_constraintBottom_toBottomOf="@id/backBt"/>

    <TextView
        android:id="@+id/settleQuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/whom_settle_up_with"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/balances_rv"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dimen_32"
        android:layout_marginStart="@dimen/dimen_10"
        android:layout_marginEnd="@dimen/dimen_10"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview" />

    <LinearLayout
        android:id="@+id/settleUp_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settleQuest" />

    <TextView
        android:id="@+id/alreadySettled_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_32"
        android:text="@string/seems_settled"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/no_transactions_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_32"
        android:text="@string/no_transactions"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress_pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/custom_progress"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>